// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<AgeStep/> Component tests display an error for invalid decimal age 1`] = `
<div>
  <div
    class="flex flex-col gap-4 w-full"
  >
    <div
      class="flex flex-col gap-2 items-start"
    >
      <label>
        Age
        :
      </label>
      <input
        class="input input-bordered input-primary w-full max-w-xs"
        data-testid="age"
        type="number"
        value="10.5"
      />
      <span
        class="error-text"
      >
        Please enter a valid positive integer age.
      </span>
    </div>
    <button
      class="btn btn-primary"
    >
      Buy Now
    </button>
  </div>
</div>
`;

exports[`<AgeStep/> Component tests render age input properly 1`] = `
<div>
  <div
    class="flex flex-col gap-4 w-full"
  >
    <div
      class="flex flex-col gap-2 items-start"
    >
      <label>
        Age
        :
      </label>
      <input
        class="input input-bordered input-primary w-full max-w-xs"
        data-testid="age"
        type="number"
        value="0"
      />
    </div>
    <button
      class="btn btn-primary"
    >
      Buy Now
    </button>
  </div>
</div>
`;
